[package]
name = "iching"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
categories = ["games"]
description = "A library for divination with the I-Ching"
edition = "2018"
keywords = ["divination", "iching", "fortune"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Velfi/i-ching"
version = "0.2.0"

[lib]
name = "iching"
path = "src/lib.rs"

[[bin]]
name = "iching"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "2.32", features = ["color"] }
itertools = "0.7"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
