[package]
name = "iching"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
categories = ["games"]
description = "A library for divination with the I-Ching"
documentation = "https://docs.rs/iching/"
edition = "2018"
keywords = ["divination", "iching", "fortune"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Velfi/i-ching"
version = "0.4.0"

[lib]
name = "iching"
path = "src/lib.rs"

[[bin]]
name = "iching"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "3.0.0-beta.4", features = ["color"] }
itertools = "0.10"
rand = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
