[package]
name = "iching"
version = "0.5.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
description = "An app for divination with the I-Ching"
categories = ["games"]
keywords = ["divination", "iching", "fortune"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/Velfi/i-ching"

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.4", features = ["derive"] }
fastrand = "1.8.0"
num-bigint = "0.4.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
termcolor = "1.2.0"
thiserror = "1"
